--- a/Cloud_App/package.json
+++ b/Cloud_App/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/simonem/tiles-dev-sw.git"
   },
   "author": "Jonas Kirkemyr",
-  "license": "MIT",
+  "license": "?",
   "bugs": {
     "url": "https://github.com/simonem/tiles-dev-sw/issues"
   },
