--- a/Tiles CLOUD/webClient/package.json
+++ b/Tiles CLOUD/webClient/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/simonem/tiles-dev-sw#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.9.2",
