--- a/Tiles CLOUD/webClient/package.json
+++ b/Tiles CLOUD/webClient/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-handlebars": "^0.11.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-sass": "^0.9.2",
