--- a/Tiles CLOUD/webClient/package.json
+++ b/Tiles CLOUD/webClient/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/simonem/tiles-dev-sw#readme",
   "devDependencies": {
+    "assemble": "^0.4.42",
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-handlebars": "^0.11.0",
@@ -20,6 +21,7 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-pure-grids": "^1.0.2",
     "grunt-stripmq": "0.0.6"
   }
