--- a/Tiles CLOUD/webClient/package.json
+++ b/Tiles CLOUD/webClient/package.json
@@ -24,5 +24,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-pure-grids": "^1.0.2",
     "grunt-stripmq": "0.0.6"
+  },
+  "dependencies": {
+    "handlebars": "^4.0.3"
   }
 }
