--- a/Tiles CLOUD/webClient/package.json
+++ b/Tiles CLOUD/webClient/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "assemble": "^0.4.42",
     "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-handlebars": "^0.11.0",
     "grunt-contrib-jshint": "^0.11.3",
