--- a/Tiles CLOUD/webClient/bower.json
+++ b/Tiles CLOUD/webClient/bower.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "bootstrap-sass": "bootstrap-sass-official#~3.3.5",
-    "awesome-bootstrap-checkbox": "~0.3.5"
+    "awesome-bootstrap-checkbox": "~0.3.5",
+    "console-log-div": "~0.6.2"
   }
 }
