--- a/Tiles CLOUD/api-server/package.json
+++ b/Tiles CLOUD/api-server/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "ponte": "0.0.14",
     "serve-favicon": "~2.3.0"
   }
 }
