--- a/Tiles CLOUD/api-server/package.json
+++ b/Tiles CLOUD/api-server/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "mongoose": "^4.2.5",
     "morgan": "~1.6.1",
     "ponte": "0.0.14",
     "serve-favicon": "~2.3.0"
