--- a/Tiles CLOUD/api-server/package.json
+++ b/Tiles CLOUD/api-server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ascoltatori": "^1.1.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,6 +15,7 @@
     "mongoose": "^4.2.5",
     "morgan": "~1.6.1",
     "ponte": "0.0.14",
+    "qlobber": "^0.5.3",
     "serve-favicon": "~2.3.0"
   }
 }
