--- a/Tiles CLOUD/client-lib/package.json
+++ b/Tiles CLOUD/client-lib/package.json
@@ -4,11 +4,17 @@
   "description": "A client library for TILES",
   "main": "tiles-client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle-js": "browserify tiles-client.js -s TilesClient > browserTilesClient.js",
+    "bundle-min-js": "browserify tiles-client.js -s TilesClient | uglifyjs -mc > browserTilesClient.min.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mqtt": "^1.5.0"
+  },
+  "devDependencies": {
+    "browserify": "^12.0.1",
+    "uglify-js": "^2.6.1"
   }
 }
