Changed folder structure for examples and bundled JS files in client-lib

--- a/Tiles CLOUD/client-lib/.gitignore
+++ b/Tiles CLOUD/client-lib/.gitignore
@@ -33,7 +33,6 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-examples/assets
+dist
 
-browserTilesClient.js
-browserTilesClient.min.js
+examples/browser/assets
