--- a/Tiles MOBILE/package.json
+++ b/Tiles MOBILE/package.json
@@ -24,6 +24,10 @@
     {
       "locator": "https://github.com/don/cordova-plugin-ble-central.git",
       "id": "cordova-plugin-ble-central"
+    },
+    {
+      "locator": "https://github.com/katzer/cordova-plugin-background-mode.git",
+      "id": "de.appplant.cordova.plugin.background-mode"
     }
   ],
   "cordovaPlatforms": [
