--- a/Tiles MOBILE/package.json
+++ b/Tiles MOBILE/package.json
@@ -20,6 +20,7 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
+    "cordova-plugin-app-version",
     "com.ionic.keyboard",
     {
       "locator": "https://github.com/don/cordova-plugin-ble-central.git",
