--- a/Tiles MOBILE/package.json
+++ b/Tiles MOBILE/package.json
@@ -21,7 +21,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-app-version",
-    "com.ionic.keyboard",
+    "ionic-plugin-keyboard",
     {
       "locator": "https://github.com/don/cordova-plugin-ble-central.git",
       "id": "cordova-plugin-ble-central"
