--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -12,6 +12,9 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
