--- a/GATEWAY_2/tilesgateway/package.json
+++ b/GATEWAY_2/tilesgateway/package.json
@@ -10,26 +10,28 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.0",
-    "ionic-native": "2.4.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26",
-    "sw-toolbox": "3.4.0"
+    "@angular/common": "^2.2.1",
+    "@angular/compiler": "^2.2.1",
+    "@angular/compiler-cli": "^2.2.1",
+    "@angular/core": "^2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "^2.2.1",
+    "@angular/platform-browser": "^2.2.1",
+    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/platform-server": "^2.2.1",
+    "@ionic/storage": "^1.1.7",
+    "ionic-angular": "^2.0.0",
+    "ionic-native": "^2.4.1",
+    "ionicons": "^3.0.0",
+    "rxjs": "^5.0.0-beta.12",
+    "zone.js": "^0.6.26",
+    "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "^1.0.0",
+    "typescript": "^2.0.9",
+    "eslint": "^3.14.1",
+    "eslint-plugin-import": "^2.2.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
