--- a/GATEWAY_2/tilesgateway/package.json
+++ b/GATEWAY_2/tilesgateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiles gateway",
+  "name": "tilesGateway",
   "author": "it2901, group 7, 2017",
   "homepage": "https://github.com/nornes/tiles-rapIoT/",
   "repository": "https://github.com/nornes/tiles-rapIoT/",
@@ -24,9 +24,10 @@
     "ionic-angular": "^2.0.0",
     "ionic-native": "^2.4.1",
     "ionicons": "^3.0.0",
+    "mqtt": "^2.3.1",
     "rxjs": "^5.0.0-beta.12",
-    "zone.js": "^0.6.26",
-    "sw-toolbox": "^3.4.0"
+    "sw-toolbox": "^3.4.0",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^1.0.0",
