add cordova plugins and the android platform to package.json

--- a/GATEWAY_2/tilesgateway/package.json
+++ b/GATEWAY_2/tilesgateway/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "cordovaPlugins": [
+    "cordova-plugin-app-version",
+    "cordova-plugin-ble-central",
     "cordova-plugin-whitelist",
     "cordova-plugin-console",
     "cordova-plugin-statusbar",
@@ -44,6 +46,7 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [
+    "android",
     "ios",
     {
       "platform": "ios",
