--- a/GATEWAY_2/tilesgateway/package.json
+++ b/GATEWAY_2/tilesgateway/package.json
@@ -11,21 +11,21 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/forms": "^2.2.1",
-    "@angular/http": "^2.2.1",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
-    "@angular/platform-server": "^2.2.1",
-    "@ionic/storage": "^1.1.7",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@ionic/storage": "1.1.6",
     "ionic-angular": "^2.0.0",
     "ionic-native": "^2.4.1",
     "ionicons": "^3.0.0",
     "mqtt": "^2.3.1",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "^3.4.0",
     "zone.js": "^0.6.26"
   },
