--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -1,47 +1,60 @@
 {
-  "name": "tiles",
-  "version": "1.0.0",
-  "description": "Tiles: An Ionic project",
+  "name": "tilesGateway",
+  "author": "it2901, group 7, 2017",
+  "homepage": "https://github.com/nornes/tiles-rapIoT/",
+  "repository": "https://github.com/nornes/tiles-rapIoT/",
+  "licence": "Apache",
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve",
+    "test": "mocha --recursive test/pages test/providers --reporter dot"
+  },
   "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
-    "mqtt": "^1.4.3"
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@ionic/storage": "1.1.6",
+    "ionic-angular": "^2.0.0",
+    "ionic-native": "^2.4.1",
+    "ionicons": "^3.0.0",
+    "mqtt": "^2.3.1",
+    "rxjs": "5.0.0-beta.12",
+    "sw-toolbox": "^3.4.0",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
+    "@ionic/app-scripts": "^1.0.0",
     "eslint": "^3.14.1",
-    "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "mocha": "^3.2.0",
+    "typescript": "^2.0.9"
   },
   "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
     "cordova-plugin-app-version",
-    "ionic-plugin-keyboard",
-    {
-      "locator": "https://github.com/katzer/cordova-plugin-background-mode.git",
-      "id": "cordova-plugin-background-mode"
-    },
-    "cordova-plugin-compat",
-    {
-      "locator": "cordova-plugin-ble-central@1.0.5",
-      "id": "cordova-plugin-ble-central"
-    }
+    "cordova-plugin-ble-central",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-console",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [
     "android",
     "ios",
     {
-      "platform": "android",
+      "platform": "ios",
       "version": "",
-      "locator": "android"
+      "locator": "ios"
     }
-  ]
+  ],
+  "description": "tilesGateway: An Ionic project"
 }
