--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -32,9 +32,13 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^1.0.0",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.39",
+    "chai": "^3.5.0",
     "eslint": "^3.14.1",
     "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
+    "ts-node": "^2.1.0",
     "typescript": "^2.0.9"
   },
   "cordovaPlugins": [
