--- a/GATEWAY/tsconfig.json
+++ b/GATEWAY/tsconfig.json
@@ -9,10 +9,11 @@
       "dom",
       "es2015"
     ],
-    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "module": "es2015"
+    //"module": "commonjs"
   },
   "include": [
     "src/**/*.ts"
