And now it works as well...

--- a/GATEWAY/tsconfig.json
+++ b/GATEWAY/tsconfig.json
@@ -12,8 +12,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es5",
-    "module": "es2015"
-    //"module": "commonjs"
+    "module": "commonjs"
+    //"module": "es2015"
   },
   "include": [
     "src/**/*.ts"
