--- a/GATEWAY/tsconfig.json
+++ b/GATEWAY/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es5",
-    "module": "es2015"
+    "module": "commonjs"
   },
   "include": [
     "src/**/*.ts"
