--- a/GATEWAY/tsconfig.json
+++ b/GATEWAY/tsconfig.json
@@ -18,7 +18,17 @@
     "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/**/*.spec.ts",
+    "src/app/*.spec.ts",
+    "src/pages/**/*.spec.ts",
+    "src/providers/*.spec.ts",
+    "src/test.ts",
+    "src/polyfill.ts",
+    "src/mocks.ts",
+    "src/envoirment",
+    "src/envoirments",
+    "src/fixtures"
   ],
   "compileOnSave": false,
   "atom": {
