--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^2.4.10",
     "@angular/platform-browser-dynamic": "^2.4.10",
     "@angular/platform-server": "^2.4.10",
-    "@ionic/storage": "^1.1.7",
+    "@ionic/storage": "1.1.6",
     "ionic-angular": "^2.1.0",
     "ionic-native": "^2.4.1",
     "ionicons": "^3.0.0",
