--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -31,11 +31,14 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^2.2.1",
     "@ionic/app-scripts": "1.1.3",
     "@types/jasmine": "^2.5.43",
     "@types/node": "^7.0.5",
     "angular-cli": "^1.0.0-beta.28.3",
     "codecov": "^1.0.1",
+    "eslint": "^3.14.1",
+    "eslint-plugin-import": "^2.2.0",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.5.0",
@@ -46,8 +49,6 @@
     "karma-remap-istanbul": "^0.6.0",
     "phantomjs": "^2.1.7",
     "ts-node": "^2.1.0",
-    "eslint": "^3.14.1",
-    "eslint-plugin-import": "^2.2.0",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.4.0",
     "typescript": "2.0.9"
