--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.4.10",
     "@angular/platform-browser-dynamic": "^2.4.10",
     "@angular/platform-server": "^2.4.10",
+    "@ionic-native/ble": "^3.2.3",
     "@ionic/storage": "1.1.6",
     "ionic-angular": "^2.1.0",
     "ionic-native": "^2.4.1",
