--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -13,7 +13,8 @@
     "lint": "tslint -c ./tslint.json --project ./tsconfig.json"
   },
   "dependencies": {
-    "@angular/common": "^2.4.10",
+    "@angular/common": "2.4.10",
+    "@angular/common": "2.4.8",
     "@angular/compiler": "^2.4.10",
     "@angular/compiler-cli": "^2.4.10",
     "@angular/core": "^2.4.10",
@@ -25,12 +26,14 @@
     "@ionic-native/ble": "^3.2.3",
     "@ionic-native/core": "^3.2.3",
     "@ionic/storage": "1.1.6",
+    "angular-cli": "^1.0.0-beta.28.3",
     "ionic-angular": "^2.1.0",
     "ionic-native": "^2.4.1",
     "ionicons": "^3.0.0",
     "mqtt": "^2.3.1",
     "rxjs": "^5.0.1",
     "sw-toolbox": "^3.4.0",
+    "typescript": "^2.0.9",
     "zone.js": "^0.7.8"
   },
   "devDependencies": {
@@ -55,8 +58,7 @@
     "ts-node": "^2.1.0",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.4.0",
-    "tslint-ionic-rules": "^0.0.8",
-    "typescript": "^2.0.9"
+    "tslint-ionic-rules": "^0.0.8"
   },
   "cordovaPlugins": [
     "ionic-plugin-keyboard",
