--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -13,15 +13,15 @@
     "lint": "tslint -c ./tslint.json --project ./tsconfig.json"
   },
   "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/compiler-cli": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/platform-server": "^2.4.10",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
     "@ionic-native/ble": "^3.2.3",
     "@ionic-native/core": "^3.2.3",
     "@ionic/storage": "1.1.6",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-beta.28.3",
+    "@angular/tsc-wrapped": "^4.0.0",
     "@ionic/app-scripts": "1.1.3",
     "@types/jasmine": "^2.5.43",
     "@types/node": "^7.0.5",
