--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -22,20 +22,20 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@angular/tsc-wrapped": "2.4.8",
     "@ionic-native/ble": "^3.2.3",
     "@ionic-native/core": "^3.2.3",
     "@ionic/storage": "1.1.6",
     "ionic-angular": "^2.1.0",
     "ionic-native": "^2.4.1",
     "mqtt": "^2.3.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "5.0.1",
     "sw-toolbox": "^3.4.0",
     "typescript": "^2.0.9",
     "zone.js": "^0.7.8"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-beta.28.3",
-    "@angular/tsc-wrapped": "^4.0.0",
     "@ionic/app-scripts": "1.1.3",
     "@types/jasmine": "^2.5.43",
     "@types/node": "^7.0.5",
