--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -32,7 +32,7 @@
     "rxjs": "5.0.1",
     "sw-toolbox": "^3.4.0",
     "typescript": "^2.0.9",
-    "zone.js": "^0.7.8"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-beta.28.3",
