--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "1.1.6",
     "ionic-angular": "^2.1.0",
     "ionic-native": "^2.4.1",
+    "ionicons": "^3.0.0",
     "mqtt": "^2.3.1",
     "rxjs": "5.0.1",
     "sw-toolbox": "^3.4.0",
