--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,16 @@ script:
 before_install:
   - cd GATEWAY
   - npm install -g cordova ionic typescript tslint angular-cli karma
-  — export CHROME_BIN=chromium-browser
-  — export DISPLAY=:99.0
-  — sh -e /etc/init.d/xvfb start
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 apt:
   sources:
-    — google-chrome
+    - google-chrome
   packages:
-    — google-chrome-stable
-    — google-chrome-beta
+    - google-chrome-stable
+    - google-chrome-beta
 
 before_script:
   - npm install
