--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,18 @@ script:
 before_install:
   - cd GATEWAY
   - npm install -g cordova ionic typescript tslint angular-cli karma yarn
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
 
 before_script:
   - npm install
+  - ng build
+
