--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-
+sudo: required
+dist: trusty
 
 language: node_js
 node_js:
@@ -20,6 +21,14 @@ script:
   - npm run lint
   - karma start ./karma.conf.js --single-run
 
+addons:
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
+
 before_install:
   - cd GATEWAY
   - npm install -g cordova ionic typescript tslint angular-cli karma yarn
@@ -27,12 +36,6 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
-apt:
-  sources:
-    - google-chrome
-  packages:
-    - google-chrome-stable
-    - google-chrome-beta
 
 before_script:
   - npm install
