revert previous travis.yml change as it did not work and fix a bug in karma config

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache: yarn
 script:
   - ionic build
   - npm run lint
-  - node node_modules/karma/bin/karma start ./karma.conf.js --single-run
+  - karma start ./karma.conf.js --single-run
 
 addons:
 apt:
