--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ branches:
 cache: yarn
 
 script:
-  - ionic build
+  - ionic build android
   - npm run lint
   - karma start ./karma.conf.js --single-run
 
@@ -36,4 +36,5 @@ before_install:
 
 before_script:
   - npm install
+  - ionic platform add android
 
