--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^2.4.10",
     "@angular/tsc-wrapped": "^0.5.0",
     "@ionic-native/background-fetch": "^3.4.3",
+    "@ionic-native/background-mode": "^3.6.1",
     "@ionic-native/ble": "^3.2.3",
     "@ionic-native/core": "^3.2.3",
     "@ionic/storage": "1.1.6",
