--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ apt:
 before_install:
   - cd GATEWAY
   - npm install -g cordova ionic typescript tslint angular-cli karma yarn
+  - npm update
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
