--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -48,6 +48,7 @@
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-htmlfile-reporter": "^0.3.5",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
