make app work with new ionic cli. Also fix small bug that came up when trying to make the changes requested after delivering finished product

--- a/GATEWAY/ionic.config.json
+++ b/GATEWAY/ionic.config.json
@@ -1,6 +1,5 @@
 {
   "name": "tilesGateway",
-  "app_id": "412d1239",
-  "v2": true,
-  "typescript": true
+  "app_id": "56b401d2",
+  "type": "ionic-angular"
 }
