--- a/GATEWAY/package.json
+++ b/GATEWAY/package.json
@@ -1,92 +1,116 @@
 {
-  "name": "tilesGateway",
-  "author": "it2901, group 7, 2017",
-  "homepage": "https://github.com/nornes/tiles-rapIoT/",
-  "repository": "https://github.com/nornes/tiles-rapIoT/",
-  "licence": "Apache",
-  "scripts": {
-    "clean": "ionic-app-scripts clean --tsconfig ./configs/tsconfig.prod.json",
-    "build": "ionic-app-scripts build --tsconfig ./configs/tsconfig.prod.json",
-    "ionic:build": "ionic-app-scripts build --tsconfig ./configs/tsconfig.prod.json",
-    "ionic:serve": "ionic-app-scripts serve --tsconfig ./configs/tsconfig.prod.json",
-    "test": "ng test",
-    "lint": "tslint src/**/**/*.ts src/**/*.ts -e **/src/**/*.spec.ts"
-  },
-  "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/compiler-cli": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/platform-server": "^2.4.10",
-    "@angular/tsc-wrapped": "^0.5.0",
-    "@ionic-native/background-fetch": "^3.6.1",
-    "@ionic-native/background-mode": "^3.6.1",
-    "@ionic-native/ble": "^3.6.1",
-    "@ionic-native/core": "^3.6.1",
-    "@ionic-native/diagnostic": "^3.6.1",
-    "@ionic/storage": "1.1.6",
-    "ionic-angular": "^2.1.0",
-    "ionic-native": "^2.4.1",
-    "ionicons": "^3.0.0",
-    "mqtt": "^2.3.1",
-    "rxjs": "5.0.1",
-    "sw-toolbox": "^3.4.0",
-    "typescript": "^2.0.9",
-    "zone.js": "0.7.2"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.1.3",
-    "@types/jasmine": "^2.5.43",
-    "@types/node": "^7.0.5",
-    "angular-cli": "^1.0.0-beta.28.3",
-    "codecov": "^1.0.1",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-htmlfile-reporter": "^0.3.5",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "phantomjs-prebuilt": "^2.1.7",
-    "ts-node": "^2.1.0",
-    "tslint": "^4.5.1",
-    "tslint-ionic-rules": "^0.0.8"
-  },
-  "cordovaPlugins": [
-    "ionic-plugin-keyboard",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "cordova-sqlite-storage",
-    "cordova-plugin-ble-central",
-    "cordova-plugin-compat"
-  ],
-  "cordovaPlatforms": [
-    "android",
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "tilesGateway",
+    "author": "it2901, group 7, 2017",
+    "homepage": "https://github.com/nornes/tiles-rapIoT/",
+    "repository": "https://github.com/nornes/tiles-rapIoT/",
+    "licence": "Apache",
+    "scripts": {
+        "clean": "ionic-app-scripts clean --tsconfig ./configs/tsconfig.prod.json",
+        "build": "ionic-app-scripts build --tsconfig ./configs/tsconfig.prod.json",
+        "ionic:build": "ionic-app-scripts build --tsconfig ./configs/tsconfig.prod.json",
+        "ionic:serve": "ionic-app-scripts serve --tsconfig ./configs/tsconfig.prod.json",
+        "test": "ng test",
+        "lint": "tslint src/**/**/*.ts src/**/*.ts -e **/src/**/*.spec.ts"
     },
-    {
-      "platform": "android",
-      "version": "",
-      "locator": "android"
+    "dependencies": {
+        "@angular/common": "^2.4.10",
+        "@angular/compiler": "^2.4.10",
+        "@angular/compiler-cli": "^2.4.10",
+        "@angular/core": "^2.4.10",
+        "@angular/forms": "^2.4.10",
+        "@angular/http": "^2.4.10",
+        "@angular/platform-browser": "^2.4.10",
+        "@angular/platform-browser-dynamic": "^2.4.10",
+        "@angular/platform-server": "^2.4.10",
+        "@angular/tsc-wrapped": "^0.5.0",
+        "@ionic-native/background-fetch": "^3.6.1",
+        "@ionic-native/background-mode": "^3.6.1",
+        "@ionic-native/ble": "^3.6.1",
+        "@ionic-native/core": "^3.6.1",
+        "@ionic-native/diagnostic": "^3.6.1",
+        "@ionic/storage": "1.1.6",
+        "ionic-angular": "^2.1.0",
+        "ionic-native": "^2.4.1",
+        "ionicons": "^3.0.0",
+        "mqtt": "^2.3.1",
+        "rxjs": "5.0.1",
+        "sw-toolbox": "^3.4.0",
+        "typescript": "^2.0.9",
+        "zone.js": "0.7.2",
+        "cordova-plugin-background-mode": "~0.7.2",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.1",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "~2.0.2",
+        "cordova.plugins.diagnostic": "~3.5.0",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
-    {
-      "platform": "browser",
-      "version": "",
-      "locator": "browser"
+    "devDependencies": {
+        "@ionic/app-scripts": "1.1.3",
+        "@ionic/cli-plugin-cordova": "1.2.1",
+        "@ionic/cli-plugin-ionic-angular": "1.2.0",
+        "@types/jasmine": "^2.5.43",
+        "@types/node": "^7.0.5",
+        "angular-cli": "^1.0.0-beta.28.3",
+        "codecov": "^1.0.1",
+        "jasmine-core": "^2.5.2",
+        "jasmine-spec-reporter": "^3.2.0",
+        "karma": "^1.5.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-htmlfile-reporter": "^0.3.5",
+        "karma-jasmine": "^1.1.0",
+        "karma-mocha-reporter": "^2.2.2",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "karma-remap-istanbul": "^0.6.0",
+        "phantomjs-prebuilt": "^2.1.7",
+        "ts-node": "^2.1.0",
+        "tslint": "^4.5.1",
+        "tslint-ionic-rules": "^0.0.8"
+    },
+    "cordovaPlugins": [
+        "ionic-plugin-keyboard",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "cordova-sqlite-storage",
+        "cordova-plugin-ble-central",
+        "cordova-plugin-compat"
+    ],
+    "cordovaPlatforms": [
+        "android",
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        },
+        {
+            "platform": "android",
+            "version": "",
+            "locator": "android"
+        },
+        {
+            "platform": "browser",
+            "version": "",
+            "locator": "browser"
+        }
+    ],
+    "description": "tilesGateway: An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-background-mode": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-sqlite-storage": {},
+            "cordova.plugins.diagnostic": {},
+            "ionic-plugin-keyboard": {}
+        }
     }
-  ],
-  "description": "tilesGateway: An Ionic project"
 }
